@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX tcsh-6.14-makefile.patch 482 SHA256 7036e1d68ce181405800d78b33f9884da6e36f590f5287190911ddec65a540ce SHA512 5afce3b3c9c4d9a9d8aaa46503a2538235ab7c4d427d7439ef3ea2b036b0cb1a43adcb63ceb31de07938de2f7834ee01940acbce5cfc8015a3d3159cd774e6d8 WHIRLPOOL 9958155cf34a969205ff846e32510235868e1fbce162605d68957333bab602cf4e927a8825c3165091bb83473cf4f1498701ad275a0eda297848d2a36ee617eb
 AUX tcsh-6.14-use-ncurses.patch 365 SHA256 8c335f04db220b01235a7a2c8158231d3295ec6572c1bcecfc78c61743facd58 SHA512 d643cde35ab563921fde097d515ea5a47e04d5d53d55b7b2fc1f30bb42f90effa4fdf84ebc1a9d5775e5533330988c65581d31dc60e3d3f1ace10fb426714337 WHIRLPOOL 37de757de32adb67f0e74542f601b952de7a6087df5628e84d6919b8065c2e04af1e795a877fe940b75da27f0e2743178e668bf2915ccf43c825069105d5e339
 AUX tcsh-6.14.00-debian-dircolors.patch 444 SHA256 a9568a2a474ef662a665c87c52983fea7999e5cf2bc4920d45baa2558c9dc32a SHA512 acbfd2a6d90c812f5729ce491dbc01b966bd99f65dcd56e7129f2250b5e2097268e3451a6beb1561c1df3d2376b2ef63192faf68521f1105b6ebdd28cea59cbd WHIRLPOOL 894bbd8269467963167b9769cdee6824d6de7bf754ee724c62fbb0b59af3093a3be91c220ea60fd191ace8ecabcd2dd17ef403294a774602a7edf52fb98bdf87
@@ -9,6 +12,23 @@ DIST tcsh-gentoo-patches-r1.8.tar.bz2 2484 SHA256 77fa4ae60090ad5a6ec50185eec907
 DIST tcsh-gentoo-patches-r1.9.tar.bz2 2488 SHA256 6375f48d78b64fd97fc2cb07e8117e41459521a8de3919d174eec321a98af483 SHA512 9903e9c3e2279abcac09a3235f3c5db9f42156c18137eb651ede195ca2b069f0b5bc6105fed33666b69796c4ebf03e4efe63cd9beba1898bac7297a2f74bfd3d WHIRLPOOL a16e642f32095f5403cad38446acc50e1802e874dba66eccfdc2ab7f5108fe77e91f5990585ba4fffb808be92c15a05f70eaf1fb436da040287b04c207c9a105
 EBUILD tcsh-6.17-r1.ebuild 2672 SHA256 12edb6822d2fe4e60dfd6f6f2a2d3fe6dd436dbb953a52bb5efd3acf53761b63 SHA512 519b50c9d058a17fe3038567b16feee39e449c02bdc0b1caf11edf6c6b5d3cd4f7e901addc9736008a440c6284b2ef7aced900240c1c21c46d906c97a1e7d0b3 WHIRLPOOL 452fc6734c5ee7fee583b03855fd7689b2a5c137f40d6aba0d25c852fd7664bf395b82a9e9450efd18901faf5485fe1e556e55de864b8396994c3611e2459abb
 EBUILD tcsh-6.17.06.ebuild 2625 SHA256 e15163a06c72b6f6376d6fa5e4d439adccb4b7df690931cb093bc30c152327cb SHA512 039f4c1ae1eda8e9d65e2ecd72749ffefb09959a0d593bc240bdd2e2917da26e2a240d7ef9818e79f6ce4fd0b0e496c291f463e01561bce85921ea08f7e2527e WHIRLPOOL c757fa7c8b29177d740c0c9b9a665c17108124eda6c2378911349890817aa2e551ee54b34c593407338965fd00902f359cddbd27c7f897e1b8f27aa0f50b1b79
-EBUILD tcsh-6.18.01.ebuild 2635 SHA256 bfc6b4035678e07db09621d3eee465b11d96cc539e691c9dfb5c18c2d0630eaa SHA512 3f188246ba74c12f50ce0aa07a33cc14e985557244bdfae15173a957bd2ac97847ef424e802755dc098652bb64e5be60af4dd42a0a6ce779b839ec24c06a1729 WHIRLPOOL 52d6cc3e8dafa07f261f66d43d0563c71aa190e97ee6228eddefca66b41a16401849102c7a9683713d6db40f10bdb9fc3dde598b1ad9c1dbd8efcddf43d25bd2
-MISC ChangeLog 16531 SHA256 66db19ecea362011bf4c01545dedd49043bc7c66c0c1fd99b59d5449894f861c SHA512 9b5b1128a0d6780a4ec283eeff0f740ae6f8fe186f296780e40c70bc74e88ac8073520433b846c69e61f6a7587807e824f15cf6ef2e7d979ebf9c52acd39d3c1 WHIRLPOOL 219bcdde67853ee8e8e2a026651c3011717b60e31faf298d2b48602253de982309556a85e83dd6cc766ea09fcfb59ee749419171a35f7970e3b491356cd5c571
+EBUILD tcsh-6.18.01.ebuild 2630 SHA256 ad1531d3f4ea7a26dd4d58ea1528109c799b12303aabae54872b2818b280e011 SHA512 36932c41f6b472f2264a0430681c4d784ad6f736877a9a800a08e8e1d4f6c737c2f689e872743a5294f2a882bdc39ea40931dd109951871516b9f97221393f63 WHIRLPOOL f171432405560a1ef3cc572e1d83aa0e4ab8abd9de8a395d04dc86ba5e5a75ce66ba3c1f5f2ec7d4f9ecbbf93eae17c1ace210461f3c46ea0c61de0b711883c5
+MISC ChangeLog 16634 SHA256 3c74a42ac798baba8bdc23824821be59fcc37a8b9238fcf455da7d263052fe53 SHA512 cf4ccbcd340fbb8ecb25331f972adeafbb6d1d1bd4ebaf6ee6ae1d877e5c166901067bdf2863245dc57797c967511335cc00f0b990a5c4cd015fd6e24801fa56 WHIRLPOOL 201e9b3437ed77f5e94404518bbcee3cae809ea6700d79cf147af98dda8a5afdf90a6b86709ea3cba76ca2d456403d2fec6a802f588a9ae4fef998280b58eade
 MISC metadata.xml 706 SHA256 318990e6f93f738cc70e956b6b00831079b273215eb994da7ec80f03aaa0db59 SHA512 96a1cd8a158d54ac3407252373a656d5935faf95e762abfdcff9f979800bd245578e0eaae043ee4c9f194bec7d9105cc464d5cebe6640baa0db894ba595a3c68 WHIRLPOOL a8f93cdf4fb6f2d07d25ad2eff064dcbb0a442acaa09f6d03f62ec4f8a57adf5248a47d75ebbc4365f0bfb13bfb4d755b341e8d24627a741283e76b968643e1d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCgAGBQJRdkGYAAoJELp701BxlEWfbw4P/RjDDNngJQD606SzoeYgcRkQ
+oFMR6wwbs0zpbwRvIk+Xs1TBB4aUAN2b5lS+tt1dDTwv7SMA8skIRlq312V3PpC2
+csdCQzH3jNhF1xRcl9q4UAx4sEvWMDT+qH2rif22eXmCcfwkYbrx5AXRAmc0LPan
+RoSqH5dgAaW+gSQUYMD7V4OmIDJOiTo/n04cC5/EgBkzFALYe8adIIUOQ9/jkkef
+Rt/2v8rPOJAyvCMNuRVFvDXtHyrcaiK7hFN5+D1Nb4OSXkVHzOu28+QeaIgnnk8k
+fVtOMzAOSDdLJCtnisA7FDxT3YCEcimbKJbbP8Y3/qqqODGHKZQb9FoxMR0yUIr3
+xbeffGjxW052ztQztbsYg0zdTAEAe45btv3W4fBZepvrTYracspR1fDfg6DEwERv
+cbygxMuNi1ySC4DKkJTsngo5bSCr2U6aQBz16+vPw1ij7bhw1zWT2NYWZLvNepnk
+UkppZ2YkaBhwH6Ib1eBh5mu1WcH14VJGIlh1YlFeSswL+Hv3t4Xh/UB0mFsKbKwb
+dCugw9O6HyflQVHngKVpc3Fl0tlR9LEQA425D8Ctlk3cAo+/+E06WvaxKcmU0+Xh
+9n/8n/Auy7mNTG5REkuWCGmKEXcmFqM396tolQXv7vL3hWRzmID4Sq3mcWwsAZom
+vd5yRuI+dWrDv0uml4IC
+=36PW
+-----END PGP SIGNATURE-----
