@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/tcsh
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.112 2012/03/08 11:48:40 grobian Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.113 2013/04/23 08:09:05 ago Exp $
+
+  23 Apr 2013; Agostino Sarubbo <ago@gentoo.org> tcsh-6.18.01.ebuild:
+  Stable for amd64, wrt bug #466834
 
   08 Mar 2012; Fabian Groffen <grobian@gentoo.org> -tcsh-6.16.ebuild,
   tcsh-6.18.01.ebuild:
